--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<nav>
+  <div class="container">
+    <div class="logo">become<span>DEV</span></div>
+    <div class="nav-items">
+      <ul>
+        <li><a routerLink="/login">Sign in</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
