style job-search component

--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -1,1 +1,30 @@
-<p>job-search works!</p>
+<section class="job-search">
+	<div class="container">
+		<input type="text" placeholder="job title" />
+		<select name="" id="">
+			<option value="">Location</option>
+			<option value="">Poland</option>
+			<option value="">Germany</option>
+			<option value="">France</option>
+			<option value="">United States</option>
+		</select>
+		<button>Find jobs</button>
+	</div>
+	<div class="filters">
+		<select name="" id="">
+			<option value="">Technologies</option>
+		</select>
+		<select name="" id="">
+			<option value="">Salary</option>
+		</select>
+		<select name="" id="">
+			<option value="">Experience Level</option>
+		</select>
+		<select name="" id="">
+			<option value="">Location</option>
+		</select>
+		<select name="" id="">
+			<option value="">Remote</option>
+		</select>
+	</div>
+</section>
