--- a/src/app/core/layout/jobs-page/jobs-page.component.html
+++ b/src/app/core/layout/jobs-page/jobs-page.component.html
@@ -1,4 +1,6 @@
-<app-job-search></app-job-search>
+<div class="search">
+  <app-job-search></app-job-search>
+</div>
 <div class="job-list">
   <app-job></app-job>
 </div>
