--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,10 +1,12 @@
 <nav>
-  <div class="container">
-    <div class="logo">become<span>DEV</span></div>
-    <div class="nav-items">
-      <ul>
-        <li><a routerLink="/login">Sign in</a></li>
-      </ul>
-    </div>
-  </div>
+	<div class="container">
+		<div class="logo">
+			<a routerLink=""> become<span>DEV</span></a>
+		</div>
+		<div class="nav-items">
+			<ul>
+				<li><a routerLink="/login">Sign in</a></li>
+			</ul>
+		</div>
+	</div>
 </nav>
