--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,31 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+	font-family: "Roboto", sans-serif;
+	background-color: #171717;
+	color: #fff;
 }
 
-a {
-  text-decoration: none;
+a,
+a:visited,
+a:hover,
+a:active {
+	color: inherit;
+	text-decoration: none;
 }
 
-nav {
-  .container {
-    margin: auto;
-    width: calc(100% - 30px);
-  }
+ul {
+	list-style: none;
+}
+
+nav,
+section {
+	.container {
+		margin: auto;
+		width: calc(100% - 30px);
+	}
 }
