--- a/src/app/core/layout/jobs-page/components/job/job.component.html
+++ b/src/app/core/layout/jobs-page/components/job/job.component.html
@@ -1,7 +1,7 @@
 <div class="job" routerLink="job-offer/{{ this.job.id }}">
 	<div class="job-left">
 		<p class="job-title">
-			{{ this.job.title }}
+			{{ this.job.title | checkValue }}
 		</p>
 		<div class="job-company-name">
 			<img
@@ -18,7 +18,7 @@
 		<p class="job-salary">{{ this.job.salary }}</p>
 	</div>
 	<div class="job-right">
-		<p class="job-date">{{ this.job.add_date }}</p>
+		<p class="job-date">{{ this.job.add_date | date: "d/M/yyyy" }}</p>
 		<div class="job-exp">
 			<div *ngFor="let exp of this.job.exp_level">
 				{{ this.exp }}
