--- a/src/app/core/layout/jobs-page/components/job-info/job-info.component.scss
+++ b/src/app/core/layout/jobs-page/components/job-info/job-info.component.scss
@@ -14,6 +14,7 @@
 		position: fixed;
 		display: flex;
 		justify-content: center;
+		cursor: pointer;
 		align-items: center;
 		top: 15px;
 		right: 15px;
