--- a/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
+++ b/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
@@ -14,7 +14,9 @@
 			<p>Salary: {{ this.jobInfo.salary }}</p>
 		</div>
 		<div class="right">
-			<p>Exp. level: {{ this.jobInfo.exp_level }}</p>
+			<p>
+				Exp. level: <span>{{ this.jobInfo.exp_level }}</span>
+			</p>
 			<p>Remote: {{ this.jobInfo.remote }}</p>
 			<p>Contact: {{ this.jobInfo.contact }}</p>
 		</div>
