--- a/src/app/core/layout/jobs-page/jobs-page.component.scss
+++ b/src/app/core/layout/jobs-page/jobs-page.component.scss
@@ -2,3 +2,19 @@
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
+
+@media (min-width: 1200px) {
+	.search {
+		margin-top: 3em;
+		margin-bottom: 3em;
+	}
+
+	.container {
+		display: flex;
+		gap: 20px;
+
+		& > div {
+			width: 50%;
+		}
+	}
+}
