add overflow scroll to job-info component

--- a/src/app/core/layout/jobs-page/components/job-info/job-info.component.scss
+++ b/src/app/core/layout/jobs-page/components/job-info/job-info.component.scss
@@ -133,7 +133,12 @@
 
 @media (min-width: 1200px) {
 	.job-info {
-		position: static;
+		position: sticky;
+		top: 15px;
 		border-radius: 15px;
+
+		.job-close {
+			display: none;
+		}
 	}
 }
