--- a/src/app/core/layout/jobs-page/jobs-page.component.scss
+++ b/src/app/core/layout/jobs-page/jobs-page.component.scss
@@ -15,6 +15,12 @@
 
 		& > div {
 			width: 50%;
+
+			&:nth-of-type(2) {
+				position: sticky;
+				top: 15px;
+				height: calc(100vh - 30px);
+			}
 		}
 	}
 }
