--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,11 @@ body {
 	font-family: "Roboto", sans-serif;
 	background-color: #171717;
 	color: #fff;
+
+	@media (min-width: 1200px) {
+		scrollbar-color: #000000 #000000;
+		scrollbar-width: thin;
+	}
 }
 
 a,
