add scroll to top on job click

--- a/src/app/core/layout/jobs-page/components/job/job.component.html
+++ b/src/app/core/layout/jobs-page/components/job/job.component.html
@@ -1,4 +1,8 @@
-<div class="job" routerLink="job-offer/{{ this.job.id }}">
+<div
+	class="job"
+	routerLink="job-offer/{{ this.job.id }}"
+	(click)="this.scrollInfoTop()"
+>
 	<div class="job-left">
 		<p class="job-title">
 			{{ this.job.title | checkValue }}
