--- a/src/app/core/layout/jobs-page/jobs-page.component.scss
+++ b/src/app/core/layout/jobs-page/jobs-page.component.scss
@@ -20,6 +20,8 @@
 				position: sticky;
 				top: 15px;
 				height: calc(100vh - 30px);
+				background: url(../../../../assets/images/logo.svg);
+				background-size: contain;
 			}
 		}
 	}
