--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -1,34 +1,39 @@
 <section class="job-search">
 	<div class="container">
 		<input type="text" placeholder="job title" />
-		<select name="" id="">
-			<option value="">Location</option>
-			<option value="">Poland</option>
-			<option value="">Germany</option>
-			<option value="">France</option>
-			<option value="">United States</option>
-		</select>
 		<button>Find jobs</button>
 	</div>
 	<div class="filters">
 		<select name="" id="">
 			<option selected="true" value="" disabled>Technologies</option>
 			<option value="">All</option>
-			<option value="">HTML</option>
-			<option value="">JavaScript</option>
+			<option *ngFor="let tech of jobTecnologies" value="{{ tech }}">
+				{{ tech }}
+			</option>
 		</select>
 		<select name="" id="">
 			<option selected="true" value="" disabled>Salary</option>
 			<option value="">All</option>
+			<option value="">< 5000 PLN</option>
+			<option value="">5000 - 10 000 PLN</option>
+			<option value="">10 000 - 20 000 PLN</option>
+			<option value="">> 20 000 PLN</option>
 		</select>
 		<select name="" id="">
 			<option selected="true" value="" disabled>Experience Level</option>
 			<option value="">All</option>
+			<option value="">Intern</option>
+			<option value="">Junior</option>
+			<option value="">Mid</option>
+			<option value="">Senior</option>
 		</select>
 		<select name="" id="">
 			<option selected="true" value="" disabled>Location</option>
 			<option value="">All</option>
-			<option *ngFor="let location of jobLocations" value="">
+			<option
+				*ngFor="let location of jobLocations"
+				value="{{ location }}"
+			>
 				{{ location }}
 			</option>
 		</select>
