--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -1,48 +1,47 @@
 <section class="job-search">
 	<div class="container">
 		<input type="text" placeholder="job title" />
-		<button>Find jobs</button>
+		<button (click)="this.filterJobs()">Find jobs</button>
 	</div>
 	<div class="filters">
-		<select name="" id="">
-			<option selected="true" value="" disabled>Technologies</option>
-			<option value="">All</option>
-			<option *ngFor="let tech of jobTecnologies" value="{{ tech }}">
+		<select name="" id="" [(ngModel)]="jobFilters.tech">
+			<option selected="true" value="all" disabled>Technologies</option>
+			<option value="all">All</option>
+			<option *ngFor="let tech of jobTecnologies" [value]="tech">
 				{{ tech }}
 			</option>
 		</select>
-		<select name="" id="">
-			<option selected="true" value="" disabled>Salary</option>
-			<option value="">All</option>
-			<option value="">< 5000 PLN</option>
-			<option value="">5000 - 10 000 PLN</option>
-			<option value="">10 000 - 20 000 PLN</option>
-			<option value="">> 20 000 PLN</option>
+		<select name="" id="" [(ngModel)]="jobFilters.salary">
+			<option selected="true" value="all" disabled>Salary</option>
+			<option value="all">All</option>
+			<option value="0">< 5000 PLN</option>
+			<option value="1">5000 - 10 000 PLN</option>
+			<option value="2">10 000 - 20 000 PLN</option>
+			<option value="3">> 20 000 PLN</option>
 		</select>
-		<select name="" id="">
-			<option selected="true" value="" disabled>Experience Level</option>
-			<option value="">All</option>
-			<option value="">Intern</option>
-			<option value="">Junior</option>
-			<option value="">Mid</option>
-			<option value="">Senior</option>
+		<select name="" id="" [(ngModel)]="jobFilters.exp_lvl">
+			<option selected="true" value="all" disabled>
+				Experience Level
+			</option>
+			<option value="all">All</option>
+			<option value="intern">Intern</option>
+			<option value="junior">Junior</option>
+			<option value="mid">Mid</option>
+			<option value="senior">Senior</option>
 		</select>
-		<select name="" id="">
-			<option selected="true" value="" disabled>Location</option>
-			<option value="">All</option>
-			<option
-				*ngFor="let location of jobLocations"
-				value="{{ location }}"
-			>
+		<select name="" id="" [(ngModel)]="jobFilters.location">
+			<option selected="true" value="all" disabled>Location</option>
+			<option value="all">All</option>
+			<option *ngFor="let location of jobLocations" [value]="location">
 				{{ location }}
 			</option>
 		</select>
-		<select name="" id="">
-			<option selected="true" value="" disabled>Remote</option>
-			<option value="">All</option>
-			<option value="">Yes</option>
-			<option value="">No</option>
-			<option value="">Partly-remote</option>
+		<select name="" id="" [(ngModel)]="jobFilters.remote">
+			<option selected="true" value="all" disabled>Remote</option>
+			<option value="all">All</option>
+			<option value="yes">Yes</option>
+			<option value="no">No</option>
+			<option value="partly-remote">Partly-remote</option>
 		</select>
 	</div>
 </section>
