fix job location filter

--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -41,7 +41,7 @@
 			<option value="all">All</option>
 			<option value="yes">Yes</option>
 			<option value="no">No</option>
-			<option value="partly-remote">Partly-remote</option>
+			<option value="partly">Partly-remote</option>
 		</select>
 	</div>
 </section>
