--- a/src/app/core/layout/jobs-page/components/job/job.component.html
+++ b/src/app/core/layout/jobs-page/components/job/job.component.html
@@ -8,15 +8,11 @@
 			{{ this.job.title | checkValue }}
 		</p>
 		<div class="job-company-name">
-			<img
-				src="../../../../../../assets/images/bx_bxs-building-house.svg"
-			/>
+			<img src="/assets/images/bx_bxs-building-house.svg" />
 			<p>{{ this.job.company }}</p>
 		</div>
 		<div class="job-company-location">
-			<img
-				src="../../../../../../assets/images/carbon_location-filled.svg"
-			/>
+			<img src="/assets/images/carbon_location-filled.svg" />
 			<p>{{ this.job.location }}</p>
 		</div>
 		<p class="job-salary">{{ this.job.salary }}</p>
