--- a/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
+++ b/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
@@ -1,10 +1,10 @@
 <div class="job-info">
 	<div routerLink="" class="job-close">
-		<img src="../../../../../../assets/images/mdi_forwardburger.svg" />
+		<img src="/assets/images/mdi_forwardburger.svg" />
 	</div>
 	<div class="job-bg" [style.background-color]="this.jobInfo.bg_color"></div>
 	<div class="job-logo">
-		<img src="../../../../../../assets/images/ACME.svg" alt="logo" />
+		<img src="/assets/images/ACME.svg" alt="logo" />
 	</div>
 	<div class="job-primary-info">
 		<div class="left">
