--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.scss
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.scss
@@ -78,5 +78,11 @@
 			padding: 10px 15px;
 			border-radius: 10px;
 		}
+
+		.reset {
+			border-radius: 10px;
+			padding: 0 1em;
+			font-size: 18px;
+		}
 	}
 }
