--- a/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
+++ b/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
@@ -11,18 +11,21 @@
 			<p>{{ this.jobInfo?.title }}</p>
 			<p>Company: {{ this.jobInfo?.company }}</p>
 			<p>Location: {{ this.jobInfo?.location }}</p>
-			<p>Salary: {{ this.jobInfo?.salary }}</p>
+			<p>
+				Salary: {{ this.jobInfo?.salary?.min }} -
+				{{ this.jobInfo?.salary?.max }} PLN
+			</p>
 		</div>
 		<div class="right">
 			<p>
 				Exp. level: <span>{{ this.jobInfo?.exp_level }}</span>
 			</p>
-			<p>Remote: {{ this.jobInfo?.remote }}</p>
+			<p>Remote: {{ this.jobInfo?.remote | checkValue }}</p>
 			<p>Contact: {{ this.jobInfo?.contact }}</p>
 		</div>
 	</div>
 	<div class="job-desc">
 		<p>Job Description</p>
-		<p [innerHTML]="this.jobInfo?.desc">none</p>
+		<p [innerHTML]="this.jobInfo?.desc"></p>
 	</div>
 </div>
