--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -40,6 +40,7 @@
 			<option value="all">All</option>
 			<option value="yes">Yes</option>
 			<option value="no">No</option>
+			<option value="partly">Partly</option>
 		</select>
 		<button *ngIf="this.change" class="reset" (click)="reset()">
 			reset filters
