add pipe to date value

--- a/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
+++ b/src/app/core/layout/jobs-page/components/job-info/job-info.component.html
@@ -20,7 +20,7 @@
 			<p>
 				Exp. level: <span>{{ this.jobInfo?.exp_level }}</span>
 			</p>
-			<p>Remote: {{ this.jobInfo?.remote | checkValue }}</p>
+			<p>Remote: {{ this.jobInfo?.remote }}</p>
 			<p>Contact: {{ this.jobInfo?.contact }}</p>
 		</div>
 	</div>
