--- a/src/app/core/layout/jobs-page/components/job/job.component.html
+++ b/src/app/core/layout/jobs-page/components/job/job.component.html
@@ -20,7 +20,7 @@
 		</p>
 	</div>
 	<div class="job-right">
-		<p class="job-date">{{ this.job.add_date | date: "d/M/yyyy" }}</p>
+		<p class="job-date">{{ this.job.add_date | timeFromDate }}</p>
 		<div class="job-exp">
 			<div *ngFor="let exp of this.job.exp_level">
 				<div>{{ this.exp }}</div>
