fix expperience level filter

--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -27,9 +27,9 @@
 				Experience Level
 			</option>
 			<option value="all">All</option>
-			<option value="junior">Junior</option>
-			<option value="mid">Mid</option>
-			<option value="senior">Senior</option>
+			<option value="junior" *ngFor="let exp of jobExpLevels">
+				{{ exp }}
+			</option>
 		</select>
 		<select name="" id="" [(ngModel)]="jobFilters.location">
 			<option selected="true" value="all" disabled>Location</option>
