--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -17,10 +17,16 @@
 		<select name="" id="" [(ngModel)]="jobFilters.salary">
 			<option selected="true" value="all" disabled>Salary</option>
 			<option value="all">All</option>
-			<option value="0">< 5000 PLN</option>
+			<option
+				[value]="checkSalaryValues(salary)"
+				*ngFor="let salary of jobSalaries"
+			>
+				{{ salary }}, {{ checkSalaryValues(salary) }}
+			</option>
+			<!-- <option value="0">< 5000 PLN</option>
 			<option value="1">5000 - 10 000 PLN</option>
 			<option value="2">10 000 - 20 000 PLN</option>
-			<option value="3">> 20 000 PLN</option>
+			<option value="3">> 20 000 PLN</option> -->
 		</select>
 		<select name="" id="" [(ngModel)]="jobFilters.exp_level">
 			<option selected="true" value="all" disabled>
