--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -18,15 +18,11 @@
 			<option selected="true" value="all" disabled>Salary</option>
 			<option value="all">All</option>
 			<option
-				[value]="checkSalaryValues(salary)"
+				[value]="checkSalaryValues(salary, 'num')"
 				*ngFor="let salary of jobSalaries"
 			>
-				{{ salary }}, {{ checkSalaryValues(salary) }}
+				{{ salary }}
 			</option>
-			<!-- <option value="0">< 5000 PLN</option>
-			<option value="1">5000 - 10 000 PLN</option>
-			<option value="2">10 000 - 20 000 PLN</option>
-			<option value="3">> 20 000 PLN</option> -->
 		</select>
 		<select name="" id="" [(ngModel)]="jobFilters.exp_level">
 			<option selected="true" value="all" disabled>
