comment temporary unused elements

--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.html
@@ -1,11 +1,11 @@
-<section class="job-search" (change)="displayResetBtn()">
-	<div class="container">
+<section class="job-search" (input)="displayResetBtn(); filterJobs()">
+	<!-- <div class="container">
 		<input
 			type="text"
 			placeholder="job title"
 			[(ngModel)]="jobFilters.title"
 		/>
-	</div>
+	</div> -->
 	<div class="filters" (change)="this.filterJobs()">
 		<select name="" id="" [(ngModel)]="jobFilters.technologies">
 			<option selected="true" value="all" disabled>Technologies</option>
