--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="nav-items">
 			<ul>
-				<li><a routerLink="/login">Sign in</a></li>
+				<!-- <li><a routerLink="/login">Sign in</a></li> -->
 			</ul>
 		</div>
 	</div>
