--- a/src/app/core/layout/jobs-page/components/job-search/job-search.component.scss
+++ b/src/app/core/layout/jobs-page/components/job-search/job-search.component.scss
@@ -34,7 +34,7 @@
 			cursor: pointer;
 
 			&:after {
-				content: "v";
+				content: "";
 				display: block;
 				width: 20px;
 				height: 20px;
@@ -44,26 +44,11 @@
 				left: 0;
 			}
 		}
-
-		button {
-			background-color: $accent-color;
-			border: none;
-			color: $font-color1;
-			height: 45px;
-			padding: 0 20px;
-			border-radius: 10px;
-			font-size: 22px;
-			cursor: pointer;
-			transition: background-color 0.3s;
-
-			&:hover {
-				background-color: $accent-color-hover;
-			}
-		}
 	}
 
 	.filters {
 		display: flex;
+		align-items: flex-end;
 		overflow-x: scroll;
 		padding: 0 10px;
 
@@ -80,9 +65,21 @@
 		}
 
 		.reset {
+			height: 44px;
 			border-radius: 10px;
 			padding: 0 1em;
 			font-size: 18px;
+		}
+	}
+}
+
+@media (min-width: 768px) {
+	.job-search {
+		.filters {
+			flex-wrap: wrap;
+			select {
+				margin-top: 10px;
+			}
 		}
 	}
 }
